--- a/box-resources/main.html
+++ b/box-resources/main.html
@@ -13,7 +13,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 		<link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-<style>
+<style type="text/css">
 
 div.p-app {
   float: left;
@@ -128,15 +128,6 @@ body {
     width: 100%;
 }
 
-.add-project {
-    background: #5584ff none repeat scroll 0 0;
-    border-radius: 100px;
-    color: #ffffff;
-    font-size: 14px;
-    font-weight: 600;
-    padding: 10px 27px 10px 45px;
-    position: relative;
-}
 
 .header-rightside .nav > li > a:focus,
 .header-rightside .nav > li > a:hover {
