Implement the following functions: ・Logout ・Change Password ・Profile editing ・Setting Screen

--- a/box-resources/index.html
+++ b/box-resources/index.html
@@ -7,10 +7,11 @@
 		<title>Personium Cell</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
                 <script type="text/javascript">
-//©•ª‚ÌURL‚ğæ“¾
-// cell URL‚ğæ“¾‚µ‚Ä‚»‚ê‚ğ
+//è‡ªåˆ†ã®URLã‚’å–å¾—
+// cell URLã‚’å–å¾—ã—ã¦ãã‚Œã‚’
 //var appUrl = 'https://demo.personium.io/home-app/__/login.html';
-var appUrl = 'file:///D:/git/home-app/appcell-resources/login.html';
+//var appUrl = 'file:///D:/git/home-app/appcell-resources/login.html';
+var appUrl = 'file:///D:/Personium/home-app/box-resources/login.html';
 
 var cellUrl = function() {
   var u = location.href;
