--- a/box-resources/main.html
+++ b/box-resources/main.html
@@ -92,7 +92,9 @@ body {
     background: url('https://demo.personium.io/home-app/__/background-images/dewdrop-1373998_1920.jpg') no-repeat 0 0 / cover;
 }
 
-
+textarea {
+    resize:none;
+}
 
 .display-table {
     display: table;
@@ -242,6 +244,15 @@ header {
     width: 100%;
     color: #8492af;
 }
+.modal-body textarea {
+    border: 1px solid #d4d9e3;
+    font-size: 14px;
+    font-weight: 300;
+    margin: 5px 0;
+    padding: 14px 10px;
+    width: 100%;
+    color: #8492af;
+}
 .modal-header h4 {
     color: #030;
 }
@@ -261,7 +272,6 @@ header {
 .modal-header.login-header {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-
 
 /*Main CSS*/
 
@@ -309,6 +319,11 @@ header {
 </style>
 <script type="text/javascript">
 var ha = {};
+var imgBinaryFile = null;
+//Default timeout limit - 60 minutes.
+var IDLE_TIMEOUT =  3600000;
+// Records last activity time.
+var LASTACTIVITY = new Date().getTime();
 ha.user = JSON.parse(sessionStorage.getItem("sessionData"));
 //ha.user= JSON.parse(location.hash.substring(1));
 
@@ -348,21 +363,158 @@ ha.systemApps = [
   }
 ];
 
-
 $(document).ready(function() {
     ha.populateProfile();
     ha.deploySystemApps();
-    // box一覧からアプリランチャ
+    // App launcher from the box list
 
-    $('#b-logout-ok').on('click', function() { ha.logout(); });
+    $('#b-change-password-ok').on('click', function() { ha.changePassCheck($("#pNewPassword").val(), $("#pConfirm").val());});
+    $('#b-edit-profile-ok').on('click', function () { ha.updateCellProfile(); });
+    $('#pNewPassword').blur(function() {
+       ha.charCheck($(this));
+    });
+    $('#b-logout-ok,#b-relogin-ok,#b-session-relogin-ok').on('click', function() { ha.logout(); });
+    $('#modal-edit-profile').on('show.bs.modal', function () {
+      ha.populateProfileEditData();
+    });
+    $('#modal-change-password').on('hidden.bs.modal', function () {
+      $("#pNewPassword").val("");
+      $("#pConfirm").val("");
+      $("#changeMessage").html("");
+      $("#confirmMessage").html("");
+      $('#b-change-password-ok').prop('disabled', true);
+    });
 
+    setInterval(ha.checkIdleTime, 1000);
+    document.onclick = function() {
+      LASTACTIVITY = new Date().getTime();
+    };
+    document.onmousemove = function() {
+      LASTACTIVITY = new Date().getTime();
+    };
+    document.onkeypress = function() {
+      LASTACTIVITY = new Date().getTime();
+    };
 });
 
+// Validation Check
+ha.validateDisplayName = function (displayName, displayNameSpan,txtID) {
+	var MINLENGTH = 1;
+	var MAXLENGTH = 128;
+	var letters = /^[一-龠ぁ-ゔ[ァ-ヴー々〆〤0-9a-zA-Z-_\s]+$/;
+	var specialchar = /^[-_\s]*$/;
+	var allowedLetters = /^[0-9a-zA-Z-_\s]+$/;
+	var lenDisplayName = displayName.length;
+	//this.removeStatusIcons(txtID);
+        document.getElementById(displayNameSpan).innerHTML = "";
+	if(lenDisplayName < MINLENGTH || displayName == undefined || displayName == null || displayName == "") {
+		document.getElementById(displayNameSpan).innerHTML =  "Please enter display name";
+		//this.showErrorIcon(txtID);
+		//uCellProfile.spinner.stop();
+		return false;
+	} else if (lenDisplayName >= MAXLENGTH) {
+		document.getElementById(displayNameSpan).innerHTML = "Display name cannot exceed 128 characters";
+		//uCellProfile.spinner.stop();
+		//this.showErrorIcon(txtID);
+		return false;
+	} else if (lenDisplayName != 0 && ! (displayName.match(letters))){
+		document.getElementById(displayNameSpan).innerHTML = "Special characters: only “-” & “_” are allowed";
+		//this.showErrorIcon(txtID);
+		return false;
+	} else if (lenDisplayName != 0 && !(displayName.match(allowedLetters))) {
+		document.getElementById(displayNameSpan).innerHTML = "Display name can not start with special character";
+		//this.showErrorIcon(txtID);
+		return false;
+	} else if(lenDisplayName != 0 && (specialchar.toString().indexOf(displayName.substring(0,1)) >= 0)){
+		document.getElementById(displayNameSpan).innerHTML = "Display name can not start with special character";
+		//this.showErrorIcon(txtID);
+		//uCellProfile.spinner.stop();
+		return false;
+	}
+	//this.showValidValueIcon(txtID);
+	return true;
+};
+ha.validateDescription = function (descriptionDetails, descriptionSpan) {
+	var isValidDescription = true;
+	var lenDescription = descriptionDetails.length;
+	if (lenDescription > 51200) {
+		isValidDescription = false;
+		document.getElementById(descriptionSpan).innerHTML = "Size cannot exceed 51200 characters";
+	}
+	return isValidDescription;
+};
+ha.charCheck = function(check) {
+  var passLen = check.val().length;
+  var msg = "";
+  var bool = false;
 
+  if (passLen !== 0) {
+    bool = true;
+    if (passLen < 6 || passLen > 36) {
+      msg = "Please enter between 6 to 32 characters.";
+      bool = false;
+    } else if (check.val().match(/[^0-9a-zA-Z_-]+/)) {
+      msg = "Please enter Character Type(Half Size Alphanumeric, '-', '_')";
+      bool = false;
+    }
+
+    $('#changeMessage').html(msg);
+  }
+
+  $('#b-change-password-ok').prop('disabled', !bool);
+};
+ha.changePassCheck = function(newpass, confirm) {
+  if (newpass === confirm) {
+    $('#confirmMessage').html("");
+    ha.changePass(newpass);
+  } else {
+    $('#confirmMessage').html("Password do not match. Please enter the correct password.");
+  }
+};
+ha.validateFileType = function(filePath, imageSize, popupImageErrorId) {
+	var fileExtension = filePath.substring(filePath.lastIndexOf('.') + 1)
+			.toLowerCase();
+	if (fileExtension.toLowerCase() == "jpg"
+			|| fileExtension.toLowerCase() == "jpeg"
+                        || fileExtension.toLowerCase() == "png"
+                        || fileExtension.toLowerCase() == "gif"
+                        || fileExtension.toLowerCase() == "bmp"
+	) {
+		document.getElementById(popupImageErrorId).innerHTML = "";
+		return true;
+	} else {
+		imgBinaryFile = null;
+		document.getElementById(popupImageErrorId).innerHTML = "";
+		document.getElementById(popupImageErrorId).innerHTML = "Failed to upload image; format not supported";
+		return false;
+	}
+};
+
+// Initialization
 ha.populateProfile = function() {
   $("#tProfileDisplayName").html(ha.user.profile.DisplayName);
-  $("#imProfilePicture").attr('src', ha.user.profile.Image);
+  if (ha.user.profile.Image) {
+    imgBinaryFile = ha.user.profile.Image;
+  } else {
+    imgBinaryFile = "../appcell-resources/icons/profile_image.png";
+  }
 
+  $("#imProfilePicture").attr('src', imgBinaryFile);
+  ha.populateProfileEditData();
+};
+ha.populateProfileEditData = function() {
+  $("#editDisplayName").val(ha.user.profile.DisplayName);
+  document.getElementById("popupEditDisplayNameErrorMsg").innerHTML = "";
+  $("#editDescription").val(ha.user.profile.Description);
+  document.getElementById("popupEditDescriptionErrorMsg").innerHTML = "";
+  document.getElementById("popupEditUserPhotoErrorMsg").innerHTML = "";
+  
+  $('#editImgFile').replaceWith($('#editImgFile').clone());
+  if (ha.user.profile.Image) {
+    $("#idImgFile").attr('src', ha.user.profile.Image);
+  } else {
+    $("#idImgFile").attr('src', "../appcell-resources/icons/profile_image.png");
+  }
 };
 ha.deploySystemApps = function() {
   for (var i in ha.systemApps) {
@@ -374,10 +526,128 @@ ha.deploySystemApps = function() {
     $("#dashboard").append(html);
   }
 };
+
+// File Read
+ha.attachFile = function(popupImageErrorId, fileDialogId) {
+  var file = document.getElementById(fileDialogId).files[0];
+  ha.fileName = document.getElementById(fileDialogId).value;
+  if (file) {
+    var imageFileSize = file.size / 1024;
+    if (ha.validateFileType(ha.fileName, imageFileSize, popupImageErrorId)) {
+      ha.getAsBinaryString(file);
+    }
+  }
+};
+ha.getAsBinaryString = function(readFile) {
+	try {
+		var reader = new FileReader();
+	} catch (e) {
+		//uCellProfile.spinner.stop();
+		//document.getElementById('successmsg').innerHTML = "Error: seems File API is not supported on your browser";
+		return;
+	}
+	reader.readAsDataURL(readFile, "UTF-8");
+	reader.onload = ha.loaded;
+	reader.onerror = ha.errorHandler;
+};
+ha.loaded = function(evt) {
+	imgBinaryFile = null;
+	imgBinaryFile = evt.target.result;
+        $("#idImgFile").attr('src', imgBinaryFile);
+	//document.getElementById("fileID").value = '';
+};
+ha.errorHandler = function(evt) {
+	if (evt.target.error.code == evt.target.error.NOT_READABLE_ERR) {
+		ha.spinner.stop();
+		alert("Error reading file...");
+		//document.getElementById('successmsg').innerHTML = "Error reading file...";
+	}
+};
+ha.editDisplayNameBlurEvent = function() {
+	var displayName = $("#editDisplayName").val();
+	var displayNameSpan = "popupEditDisplayNameErrorMsg";
+	var txtDisplayName = "#editDisplayName";
+	ha.validateDisplayName(displayName, displayNameSpan, txtDisplayName);
+};
+ha.editDescriptionBlurEvent = function() {
+	document.getElementById("popupEditDescriptionErrorMsg").innerHTML = "";
+	var descriptionDetails = document.getElementById("editDescription").value;
+	var descriptionSpan = "popupEditDescriptionErrorMsg";
+	ha.validateDescription(descriptionDetails, descriptionSpan);
+};
+
+// File Save
+ha.updateCellProfile = function() {
+  var displayName = $("#editDisplayName").val();
+  var description = $("#editDescription").val();
+  var fileData = null;
+  var profileBoxImageName = $('#lblEditFileName').text();
+  var validDisplayName = ha.validateDisplayName(displayName, "popupEditDisplayNameErrorMsg",'#editDisplayName');
+  if(validDisplayName){
+    $('#popupEditDisplayNameErrorMsg').html('');
+    var validDesciption = ha.validateDescription(description,"popupEditDescriptionErrorMsg");
+    if (validDesciption){
+      fileData = {
+                   "DisplayName" : displayName,
+                   "Description" : description,
+                   "Image" : imgBinaryFile,
+                   "ProfileImageName" : profileBoxImageName
+      };
+      ha.retrieveCollectionAPIResponse(fileData);
+    }
+  }
+};
+
+// Communication API
+ha.changePass = function(newpass) {
+  $.ajax({
+          type: "PUT",
+          url: ha.user.cellUrl + '__mypassword',
+          headers: {
+            'Authorization':'Bearer ' + ha.user.access_token,
+            'X-Dc-Credential': newpass
+          }
+  }).done(function(data) {
+          $('#modal-relogin').modal('show');
+  }).fail(function(data) {
+          var res = JSON.parse(data.responseText);
+          alert("An error has occurred.\n" + res.message.value);
+  });
+}
+ha.retrieveCollectionAPIResponse = function(json) {
+  $.ajax({
+    type: "PUT",
+    url: ha.user.cellUrl + '__/profile.json',
+    data: JSON.stringify(json),
+    dataType: 'json',
+    headers: {'Accept':'application/json',
+              'Authorization':'Bearer ' + ha.user.access_token}
+  }).done(function(data) {
+    $('#modal-edit-profile').modal('hide');
+    ha.user.profile.Image = imgBinaryFile;
+    ha.user.profile.DisplayName = json.DisplayName;
+    ha.user.profile.Description = json.Description;
+    ha.populateProfile();
+    sessionStorage.setItem("sessionData", JSON.stringify(ha.user));
+  }).fail(function(){
+    alert("fail");
+  });
+};
+
+// Logout
 ha.logout = function() {
   sessionStorage.setItem("sessionData", null);
   location.href = "./login.html";
 }
+
+// This method checks idle time
+ha.checkIdleTime = function() {
+  if (new Date().getTime() > LASTACTIVITY + IDLE_TIMEOUT) {
+    if (sessionStorage.isResourceMgmt = "true") {
+      $('#modal-session-expired').modal('show');
+    }
+  }
+};
 
 </script>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
@@ -417,7 +687,7 @@ ha.logout = function() {
                                                     <div class="divider">
                                                     </div>
 					<div class="list-group">
-                                             <a href="#" class="list-group-item">Edit Profile</a>
+                                             <a href="#" class="list-group-item" data-toggle="modal" data-target="#modal-edit-profile">Edit Profile</a>
                                              <a href="#" class="list-group-item" data-toggle="modal" data-target="#modal-change-password">Change Password</a>
                                              <a href="#" class="list-group-item" data-toggle="modal" data-target="#modal-logout">Logout</a>
 					</div>
@@ -443,6 +713,51 @@ ha.logout = function() {
 
 
     <!-- Modal -->
+    <!-- Edit Profile -->
+    <div id="modal-edit-profile" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content -->
+            <div class="modal-content">
+                <div class="modal-header login-header">
+                    <button type="button" class="close" data-dismiss="modal">×</button>
+                    <h4 class="modal-title">Edit Profile</h4>
+                </div>
+                <div class="modal-body">
+                    <div id="dvDisplayName">Display Name</div>
+                    <div id="dvTextDisplayName">
+                      <input type="text" id="editDisplayName" onblur="ha.editDisplayNameBlurEvent();">
+                    </div>
+                    <span class="popupAlertArea" style="color:red">
+                      <aside id="popupEditDisplayNameErrorMsg"></aside>
+                    </span>
+                    <div id="dvDescription">Description</div>
+                    <div id="dvTextDescription">
+                      <textarea onblur="ha.editDescriptionBlurEvent();" name="" cols="" rows=""  id="editDescription"></textarea>
+                    </div>
+                    <span style="padding-top: 3px;height:11px;color:red;">
+                      <aside id="popupEditDescriptionErrorMsg"></aside>
+                    </span>
+                    <div id="dvPhoto">Photo</div>
+                    <div id="dvBrowseButtonSection">
+                      <input type="file" class="fileUpload" onchange="ha.attachFile('popupEditUserPhotoErrorMsg', 'editImgFile');" id="editImgFile">
+                    </div>
+                    <div id="dvBoxProfileImage">
+                      <figure id="figEditCellProfile" class="boxProfileImage">
+                        <img style="margin: auto;" id="idImgFile" src="#" alt="image" />
+                      </figure>
+                    </div>
+                    <span style="padding-top: 3px;height:11px;color:red;">
+                      <aside id="popupEditUserPhotoErrorMsg"></aside>
+                    </span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="b-edit-profile-ok">Register</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Change Password -->
     <div id="modal-change-password" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <!-- Modal content-->
@@ -452,16 +767,36 @@ ha.logout = function() {
                     <h4 class="modal-title">Change Password</h4>
                 </div>
                 <div class="modal-body">
-                    <input type="password" placeholder="New Password" id="pNewPassword">
+                    <input type="password" placeholder="New Password (6 to 32 Character, Character Type(Half Size Alphanumeric, '-', '_'))" id="pNewPassword">
+                    <span id="changeMessage" style="color:red"></span>
                     <input type="password" placeholder="Confirm (type new password again)" id="pConfirm">
+                    <span id="confirmMessage" style="color:red"></span>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary">OK</button>
+                    <button type="button" class="btn btn-primary" id="b-change-password-ok" disabled>OK</button>
                 </div>
             </div>
         </div>
     </div>
+    <div id="modal-relogin" class="modal fade" role="dialog" data-backdrop="static">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header login-header">
+                    <h4 class="modal-title">Re-Login</h4>
+                </div>
+                <div class="modal-body">
+                     You have successfully changed your password!<br>
+                     Please login again.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" id="b-relogin-ok" >OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Log Out -->
     <div id="modal-logout" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <!-- Modal content-->
@@ -476,6 +811,24 @@ ha.logout = function() {
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-primary" id="b-logout-ok" >OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Session Expiration -->
+    <div id="modal-session-expired" class="modal fade" role="dialog" data-backdrop="static">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header login-header">
+                    <h4 class="modal-title">Re-Login</h4>
+                </div>
+                <div class="modal-body">
+                     Expiration date of the session has expired.<br>
+                     Please login again.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" id="b-session-relogin-ok" >OK</button>
                 </div>
             </div>
         </div>
