Commit uncommitted files

--- a/box-resources/en/socialgraph.html
+++ b/box-resources/en/socialgraph.html
@@ -261,7 +261,7 @@
                      <div id="dvTextConfirmation"></div>
                 </div>
                 <div class="modal-footer">
-                    
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="b-cancel" style="display:none">Cancel</button>
                     <button type="button" class="btn btn-primary" id="b-del-extcell-ok" style="display:none">Delete</button>
                     <button type="button" class="btn btn-primary" id="b-del-extcelllinkrole-ok" style="display:none">Delete</button>
                     <button type="button" class="btn btn-primary" id="b-del-extcelllinkrelation-ok" style="display:none">Delete</button>
